--- a/mobilia/src/pages/home/home.css
+++ b/mobilia/src/pages/home/home.css
@@ -1,13 +1,21 @@
-/* .home-contain {
-  height: 100vh;
+.home-contain {
+  height: 100%;
   width: 100%;
-  
-} */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #00000080;
+  padding: 50px;
+}
 .home-hero {
-  background-color: var(--accent-light);
+  /* background-color: var(--accent-light); */
+  background-image: url("https://m.media-amazon.com/images/I/61tV07vXkIL.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
-  height: calc(100vh-12vh);
+  height: calc(100vh - 12vh);
   width: 100%;
   margin: auto;
 }
@@ -32,16 +40,20 @@
 }
 .home-contain .home-h1 {
   color: var(--secondary);
-  font-size: 2.8rem;
+  font-size: 3rem;
   line-height: 4rem;
-  text-transform: capitalize;
+  text-transform: uppercase;
+  width: 50%;
+  text-align: center;
 }
 .home-contain .home-p {
-  color: var(--third);
-  font-size: 1.2rem;
+  color: var(--primary);
+  font-size: 1.5rem;
   max-width: 85%;
   margin: 1.6rem ;
   padding-left: w.5rem;
+  width: 30%;
+  text-align: center;
 
 }
 .home-contain .home-btn {
@@ -59,15 +71,16 @@
   color: var(--secondary);
   cursor: pointer;
 }
-.home-card:nth-child(1) {
-  margin-top: 6rem;
-  background-image: url("../../images/a3de.jpeg");
+.home-hero {
+  background-image: url("https://m.media-amazon.com/images/I/61tV07vXkIL.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.home-card:nth-child(2){
+/* .home-card:nth-child(2){
     background-image: url("../../images/luxury.jpeg");
 }
 .home-card:nth-child(3) {
   margin-bottom: 6rem;
   margin-right: 20px;
   background-image: url("../../images/nom.jpeg");
-}
+} */
