--- a/mobilia/src/components/products/productvisitor.css
+++ b/mobilia/src/components/products/productvisitor.css
@@ -7,7 +7,7 @@
 
 .product-h1{
   font-size: 2.5rem;
-  font-family: 'Montserrat';
+  /* font-family: 'Montserrat'; */
   font-weight: normal;
   color: #444;
   text-align: center;
